Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Remove required on request origin

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Add requests on purchase line

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Allow request without product
* Group requests of same product and unit into one purchase line

Version 4.0.0 - 2016-05-02
* Initial release