@@ -1,3 +1,5 @@
+* Warns when the warehouse of a purchase differs from its purchase requests
+
 Version 4.6.0 - 2017-10-30
 * Bug fixes (see mercurial logs for details)
 * Remove required on request origin
